<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PokerPlayerClient</string>
    <string name="action_settings">Settings</string>
    <string name="action_leave_game">Leave Game</string>
    <string name="hello_world">Hello world!</string>

    <!-- Game Selection Strings -->
    <string name="server_label">Server Address:</string>
    <string name="game_id_label">Game ID:</string>
    <string name="btn_submit">Join Game</string>
    <string name="join_game_label">Select a Game to Join</string>
    <string name="player_name_label">Name:</string>

    <!-- Poker Screen Strings -->
    <string name="chips">Chips:</string>
    <string name="bet">Amount to Call:</string>
    <string name="content_card">card background</string>
    <string name="bet_amount">Bet Amount:</string>

    <!-- Poker Screen Button Strings -->
    <string name="btn_fold">Fold</string>
    <string name="btn_check">Check</string>
    <string name="btn_call">Call</string>
    <string name="btn_bet">Bet</string>
    <string name="btn_bet_formatted">Bet\n%s</string>
    <string name="btn_raise">Raise</string>
    <string name="btn_raise_formatted">Raise To\n%s</string>
    <string name="btn_3x">3x</string>
    <string name="btn_4x">4x</string>
    <string name="btn_sit_in">Sit In</string>

    <!-- Player Status Strings -->
    <string name="not_started">Waiting For Game to Start</string>
    <string name="seating">Take Your Seat</string>
    <string name="waiting">Waiting</string>
    <string name="all_in">All In</string>
    <string name="lost_hand">Lost Hand</string>
    <string name="won_hand">Won Hand</string>
    <string name="small_blind">Post Small Blind</string>
    <string name="big_blind">Post Big Blind</string>
    <string name="action_call">Call Bet</string>
    <string name="action_check">Check or Bet</string>
    <string name="sit_out">Out of Hand</string>
    <string name="eliminated">Out of Game</string>
    <string name="sit_out_game">Sitting Out</string>

    <!-- Alert View Strings -->
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="not_allowed">This action is not allowed.</string>
    <string name="server_error">Oops. server error</string>
    <string name="no_connection">Cannot connect to server</string>
    <string name="bad_bet">Invalid Bet Amount</string>
    <string name="bad_field">Invalid field entry.</string>
    <string name="no_join">Could not join the game.</string>

    <!-- settings -->
    <string name="settings_title">Settings</string>
    <string name="vibrate_setting">Enable Vibration</string>
    <string name="title_activity_settings"></string>

</resources>
